--- a/style.css
+++ b/style.css
@@ -42,12 +42,33 @@ body {
   border-radius: 3px;
   padding: 10px 32px;
   margin-top: -18px;
-
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
-  transition: all 0.1s ease-in-out;
+  /* transition: all 0.1s ease-in-out; */
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
+}
+
+.navBar a:hover,
+.navBar a:focus {
+  background-color: #555245;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+
+.navBar a:hover {
+  transform: translateY(-5px);
+}
+
+.navBar a:active {
+  background-color: #c85000;
+  box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
+  transform: translateY(0);
 }
 
 img {
